--- a/apps/grafana.yml
+++ b/apps/grafana.yml
@@ -35,6 +35,12 @@
         pg_volumes:
           - '/opt/mycontainers/{{pgrole}}:/var/lib/grafana'
 
+    - name: 'Setting PG ENV'
+      set_fact:
+        pg_env:
+          PUID: 472
+          PGID: 472
+
     # MAIN DEPLOYMENT #############################################################
     - name: 'Deploying {{pgrole}}'
       docker_container:
@@ -44,6 +50,7 @@
         published_ports:
           - '{{ports.stdout}}{{extport}}:{{intport}}'
         volumes: '{{pg_volumes}}'
+        env: '{{pg_env}}'
         restart_policy: unless-stopped
         networks:
           - name: plexguide
