--- a/apps/unifi.yml
+++ b/apps/unifi.yml
@@ -1,18 +1,10 @@
 #!/bin/bash
 #
-# GitHub:   https://github.com/Admin9705/PlexGuide.com-The-Awesome-Plex-Server
-# Author:   Admin9705
-# URL:      https://plexguide.com
-#
-# PlexGuide Copyright (C) 2018 PlexGuide.com
-# Licensed under GNU General Public License v3.0 GPL-3 (in short)
-#
-#   You may copy, distribute and modify the software as long as you track
-#   changes/dates in source files. Any modifications to our software
-#   including (via compiler) GPL-licensed code must also be made available
-#   under the GPL along with build & install instructions.
-#
-###############################################################################
+# Title:      PGBlitz (Reference Title File)
+# Author(s):  Admin9705
+# URL:        https://pgblitz.com - http://github.pgblitz.com
+# GNU:        General Public License v3.0
+################################################################################
 ---
 - hosts: localhost
   gather_facts: false
@@ -21,62 +13,60 @@
     - name: 'Set Known Facts'
       set_fact:
         pgrole: 'unifi'
-        intport: '3478'
+        intport: '3478/udp'
         extport: '3478'
-        intport2: '10001'
+        intport2: '10001/udp'
         extport2: '10001'
-        intport3: '8080'
+        intport3: '8080/tcp'
         extport3: '8080'
-        intport4: '8081'
+        intport4: '8081/tcp'
         extport4: '8081'
-        intport5: '8443'
+        intport5: '8443/tcp'
         extport5: '8443'
-        intport6: '8843'
-        extport6: '8843'
-        intport7: '8880'
-        extport7: '8880'
-        intport8: '6789'
-        extport8: '6789'
-        image: 'linuxserver/unifi-controller'
-
-    # EXTRAS FOR RESILIO ##########################################################
-    - name: 'Create {{pgrole}} script directories'
-      file: 'path={{item}} state=directory mode=0775 owner=1000 group=1000 recurse=yes'
-      with_items:
-        - '/opt/appdata/{{pgrole}}'
-        - '/opt/appdata/{{pgrole}}/config'
-        - '/opt/appdata/{{pgrole}}/sync'
-        - '/opt/appdata/{{pgrole}}/downloads'
+        intport6: '8880/tcp'
+        extport6: '8880'
+        image: 'linuxserver/unifi-controller:latest'
 
     # CORE (MANDATORY) ############################################################
     - name: 'Including cron job'
-      include_tasks: '/opt/plexguide/containers/_core.yml'
+      include_tasks: '/opt/coreapps/apps/_core.yml'
 
     # LABELS ######################################################################
     - name: 'Adding Traefik'
       set_fact:
         pg_labels:
-          traefik.frontend.auth.forward.address: '{{gauth}}'
-          traefik.enable: 'true'
-          traefik.port: '{{intport}}'
-          traefik.frontend.rule: 'Host:{{pgrole}}.{{domain.stdout}},{{tldset}}'
+           traefik.enable: 'true'
+           traefik.tags: 'frontend'
+           traefik.frontend.passHostHeader: 'true'
+           traefik.backend: '{{pgrole}}'
+           traefik.admin.frontend.rule: 'Host:{{pgrole}}.{{domain.stdout}},{{tldset}}'
+           traefik.admin.port: '{{intport5}}'
+           traefik.admin.protocol: 'https'
+           traefik.frontend.headers.SSLRedirect: 'true'
+           traefik.frontend.headers.STSSeconds: '315360000'
+           traefik.frontend.headers.browserXSSFilter: 'true'
+           traefik.frontend.headers.contentTypeNosniff: 'true'
+           traefik.frontend.headers.forceSTSHeader: 'true'
+           traefik.frontend.headers.SSLHost: '{{domain.stdout}}'
+           traefik.frontend.headers.STSIncludeSubdomains: 'true'
+           traefik.frontend.headers.STSPreload: 'true'
+           traefik.frontend.headers.frameDeny: 'true'     
 
     - name: 'Setting PG Volumes'
       set_fact:
         pg_volumes:
-          - '/opt/appdata/{{pgrole}}/config:/config'
-          - '/opt/appdata/{{pgrole}}/sync:/sync'
-          - '/opt/appdata/{{pgrole}}/downloads:/downloads'
-          - '/mnt:/mnt'
+          - '/opt/appdata/{{pgrole}}:/config'
+          - '/etc/localtime:/etc/localtime:ro'
 
     - name: 'Setting PG ENV'
       set_fact:
         pg_env:
-          PUID: 1000
-          PGID: 1000
+          PUID: '1000'
+          PGID: '1000'
+          TZ: '${TZ}'
 
     # MAIN DEPLOYMENT #############################################################
-    - name: 'Deploy {{pgrole}} Container - OverRide'
+    - name: 'Deploying {{pgrole}}'
       docker_container:
         name: '{{pgrole}}'
         image: '{{image}}'
@@ -84,12 +74,16 @@
         published_ports:
           - '{{ports.stdout}}{{extport}}:{{intport}}'
           - '{{ports.stdout}}{{extport2}}:{{intport2}}'
+          - '{{ports.stdout}}{{extport3}}:{{intport3}}'
+          - '{{ports.stdout}}{{extport4}}:{{intport4}}'
+          - '{{ports.stdout}}{{extport5}}:{{intport5}}'
+          - '{{ports.stdout}}{{extport6}}:{{intport6}}'
         volumes: '{{pg_volumes}}'
         env: '{{pg_env}}'
-        restart_policy: unless-stopped
+        restart_policy: always
         networks:
           - name: plexguide
             aliases:
               - '{{pgrole}}'
         state: started
-        labels: '{{pg_labels}}
+        labels: '{{pg_labels}}'
